--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -76,10 +76,6 @@ body {
   font-size: 1.25rem;
 }
 
-/* .leaflet-top.leaflet-left{
-  right: 10px;
-} */
-
 .leaflet-control{
   border: none !important;
   float: none !important;
@@ -113,6 +109,10 @@ body {
 
 .scroll-snap-align {
   scroll-snap-align: start;
+}
+
+.scrollbar-hidden{
+  scrollbar-width: none;
 }
 
 @layer base {
