--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -87,8 +87,8 @@ body {
   border: 1px solid transparent;
   color: #ffffff !important;
   transition: all 0.15s ease-in;
-  width: 34 !important;
-  height: 34 !important;
+  width: 34px !important;
+  height: 34px !important;
   border-radius: 0.375rem !important;
   cursor: pointer;
 }
